# kafka-docker

./: pyproject.toml  user_event_consumer.py
